# perplexity-cli

./: AmazonQ.md  LICENSE  MANIFEST.in  README.md  TODO.md  pyproject.toml  setup.cfg  setup.py
perplexity_cli/: __init__.py  __main__.py  api.py  cli.py  config.py  models.py  perplexity_cli
tests/: __init__.py  test_api.py  test_cli.py  test_config.py
