[metadata]
name = perplexity-cli
version = attr: perplexity_cli.__version__
author = cloudxabide
author_email = cloudxabide@gmail.com
description = A command-line interface for interacting with the Perplexity AI API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cloudxabide/perplexity-cli
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2.25.0

[options.extras_require]
dev =
    pytest>=6.0.0
    pytest-cov>=2.12.0
    black>=21.5b2
    isort>=5.9.1
    flake8>=3.9.2
    mypy>=0.812

[options.entry_points]
console_scripts =
    perplexity-cli = perplexity_cli.cli:main

[flake8]
max-line-length = 88
extend-ignore = E203
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.7
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
